# ethan-runs

./: .gitignore  Gemfile  Makefile  README.md  Rakefile  alembic.ini  config.ru  requirements.txt  setup.cfg
.github/workflows/: ci.yaml  vi.yaml
alembic_migrations/: env.py
alembic_migrations/versions/: c549d7846c90_create_users_and_activities_tables.py
app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
app/schemas/: activity.py  user.py
db/: schema.rb
lib/: common.rb  ethan-runs.rb  models.rb
lib/app/: app.rb  auth.rb
lib/ethan-runs/: app.rb
lib/models/: activity.rb  auth_token.rb  user.rb
scripts/: upload_activities.py
tests/: conftest.py
tests/api/: test_activity.py  test_user.py
tests/data/: mock_data.yaml
