[metadata]
name = ethan-runs
version = 0.0.1

[options]
packages = app
install_requires =
    fastapi
    uvicorn[standard]
    sqlalchemy
    psycopg2
    python-multipart
    python-jose
    passlib
    bcrypt
[options.extras_require]
test = pytest
dev = mypy; flake8; pytest; sqlalchemy[mypy]

[flake8]
max-line-length = 88
