[metadata]
name = ethan-runs
version = 0.0.1

[options]
packages = app
install_requires =
    fastapi
    uvicorn[standard]
    sqlalchemy
    psycopg2
    python-multipart
    python-jose
    passlib
    bcrypt
[options.extras_require]
test = pytest; requests
dev = pytest; requests; mypy; flake8; sqlalchemy[mypy]; types-passlib

[flake8]
max-line-length = 88
